--- a/css/structure/jquery.mobile.dialog.css
+++ b/css/structure/jquery.mobile.dialog.css
@@ -1,7 +1,7 @@
-.ui-dialog {
+.ui-page-dialog {
 	 background: none !important; /* this is to ensure that dialog theming does not apply (by default at least) on the page div */
 }
-.ui-dialog-contain {
+.ui-page-dialog-contain {
 	width: 92.5%;
 	max-width: 500px;
 	margin: 10% auto 1em auto;
@@ -9,22 +9,22 @@
 	position: relative;
 	top: -1em;
 }
-.ui-dialog-contain > .ui-header, 
-.ui-dialog-contain > .ui-content, 
-.ui-dialog-contain > .ui-footer { 
+.ui-page-dialog-contain > .ui-header,
+.ui-page-dialog-contain > .ui-content,
+.ui-page-dialog-contain > .ui-footer {
 	display: block;
-	position: relative; 
+	position: relative;
 	width: auto;
 	margin: 0;
 }
-.ui-dialog-contain > .ui-header {
+.ui-page-dialog-contain > .ui-header {
 	overflow: hidden;
-	z-index: 10; 
+	z-index: 10;
 	padding: 0;
 	border-top-width: 0;
 }
-.ui-dialog-contain > .ui-footer {
-	z-index: 10; 
-	padding: 0 1em; 
+.ui-page-dialog-contain > .ui-footer {
+	z-index: 10;
+	padding: 0 1em;
 	border-bottom-width: 0;
 }
