--- a/css/themes/default/jquery.mobile.theme.css
+++ b/css/themes/default/jquery.mobile.theme.css
@@ -572,7 +572,7 @@ html head + body .ui-body-b.ui-focus {
 .ui-disabled,
 .ui-state-disabled,
 button[disabled],
-.ui-select .ui-btn.ui-state-disabled {
+.ui-selectmenu .ui-btn.ui-state-disabled {
 	filter: Alpha(Opacity=30);
 	opacity: .3;
 	cursor: default !important;
